// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YearPickerField Component YearPickerField renders 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class=""
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-year-picker-input"
            name="name"
            placeholder="YYYY"
            tabindex="0"
            type="text"
            value=""
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`YearPickerField Component YearPickerField renders with values in disabled highligted 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class=""
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-year-picker-input"
            disabled=""
            name="name"
            placeholder="YYYY"
            tabindex="-1"
            type="text"
            value="12345"
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`YearPickerField Component YearPickerField renders with values in readonly 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="input-year-picker-wrapper-read-only"
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-year-picker-input-read-only"
            name="name"
            placeholder="YYYY"
            readonly=""
            tabindex="-1"
            type="text"
            value="0012"
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`YearPickerField Component YearPickerField renders with values with fieldSize and inline 1`] = `
<div>
  <div
    class="fieldGroup size-6 inline"
  >
    <div
      class=""
    >
      <div
        class="react-datepicker-wrapper"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            autocomplete="off"
            class="input-year-picker-input"
            name="name"
            placeholder="YYYY"
            tabindex="0"
            type="text"
            value="0001"
          />
        </div>
      </div>
      <div />
    </div>
  </div>
</div>
`;
